# imitation-game

./: CMakeLists.txt  README  README.md  imitation_palette.xml  package.xml  palette_description.xml  plugin_description.xml
launch/: haru_imitation_game_demo.launch  haru_imitation_game_demo_real.launch
palettes/: imitation_game_palette.xml
pictures/imitation_pages/: howto.txt
pictures/imitation_pages/gestures_screenshot/: gestures_screenshot.html
pictures/imitation_pages/gestures_screenshot/js/: gestures_screenshot.js
pictures/imitation_pages/gestures_screenshot/style/: gestures_screenshot.css
pictures/imitation_pages/timer_imitate/: show_camera.html  show_camera_simulation.html
pictures/imitation_pages/timer_imitate/js/: show_camera.js
pictures/imitation_pages/timer_imitate/style/: show_camera.css
scripts/: build_debian.sh  common.sh  face_emotion.py  gesture_imitator.py  install_dependencies.sh  nlp_yesno_runner.sh  screen_recorder.py
src/: plugin.cpp
trees/: capture_photo.xml  imitating_game.xml  imitation_face_tracking.xml  imitation_game5.xml  imitation_game_demo4_v1.xml  imitation_game_demo4_v2.xml  imitation_game_demo4_v3.xml  imitation_game_demo4_v4.xml  imitation_game_v10_yesno_camera.xml  imitation_game_v11.xml  imitation_game_v8.xml  imitation_game_v9_yesno.xml  imitation_game_with_emotion.xml  imitation_v6.xml  set_position_kids_and_tv.xml  set_position_person_and_tv.xml  take_screenshot.xml  take_screenshot2.xml  take_screenshot3.xml  track_person.xml
trees/config/: tv_and_children_positions.yaml
trees/old_versions/: asr_test.xml  emotion_imitating.xml  imitating.xml  imitating_hri.xml  imitating_hri2.xml  imitation_game.xml  read_emotions.xml  subtree_emotions.xml  tts_test.xml
